# computer_vision6.5

./: README.md  main.py  pyproject.toml  requirements.txt
