[tool.poetry]
name = "panorama-generator"
version = "0.1.0"
description = "A desktop application for generating panorama images from multiple captures."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
opencv-python = "^4.5.3"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
panorama-generator = "panorama_generator:main"